--- a/ML_PCA.ipynb
+++ b/ML_PCA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML_PCA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN23XIMyqQ864vkMMnQNwAH",
+      "authorship_tag": "ABX9TyNRmUU783CXRZZTse/zVhkQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
-        "id": "HyQyqpV77any"
+        "id": "JvYiQSBlmB8w"
       },
       "outputs": [],
       "source": [
         "#import required library PCA\n",
         "from sklearn.decomposition import PCA\n",
         "#import the dataset\n",
-        "from sklearn.datasets import make_blobs"
+        "from sklearn.datasets import make_blobs\n"
       ]
     },
     {
@@ -49,21 +49,21 @@
         "random_state = 20"
       ],
       "metadata": {
-        "id": "yUJRloJ-7k9H"
+        "id": "GNsRTuWOnCOz"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Generate the dataset with 10 features (dimension)\n",
+        "#Generate the dataset with 10 features (dimension)\n",
         "X, y = make_blobs(n_samples=n_sample, n_features=10, random_state=None)"
       ],
       "metadata": {
-        "id": "zIA1muwJ7omT"
+        "id": "Ll1VdCuFnMkj"
       },
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -76,10 +76,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RYoeDyz57zyQ",
-        "outputId": "35c71e09-e89c-472b-b32b-e025cd7b2c0e"
+        "id": "oKi3DGSAn8yQ",
+        "outputId": "04a62493-d795-4cd5-9f0a-c0c7c8dc6f09"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -89,20 +89,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#define the PCA estimator with number of reduced componets\n",
+        "#define the PCA estimator with number of reduced components\n",
         "pca = PCA(n_components=3)"
       ],
       "metadata": {
-        "id": "GE-27uaw7365"
+        "id": "anHLSluKoEZm"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -110,22 +110,22 @@
       "source": [
         "#fit the data into the PCA estimator\n",
         "pca.fit(X)\n",
-        "print (pca.explained_variance_ratio_)"
+        "print(pca.explained_variance_ratio_)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "K0IHWlAC7-dr",
-        "outputId": "aa168dc8-a10a-4c0a-9517-5636d7e91ed2"
+        "id": "EUbr4U4KodUf",
+        "outputId": "b4556018-0e66-4ba6-c012-f33f5beddeb0"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.61497621 0.33420036 0.0175158 ]\n"
+            "[0.66501927 0.30855335 0.00841938]\n"
           ]
         }
       ]
@@ -141,17 +141,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Aclk83bZ8DvU",
-        "outputId": "51f9045b-84ad-42bb-c3ce-813e93a9755e"
+        "id": "WDjGZKM4oqLB",
+        "outputId": "bcc1f604-6899-40b1-d248-c1297d49e630"
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[-0.03119642 -0.34301618 -0.38039727  0.28608941  0.20373487 -0.16574478\n",
-            "  0.36124186 -0.44484479  0.05636535 -0.50426044]\n"
+            "[-0.29233057  0.55897708  0.05102289  0.36744086 -0.242452   -0.16488827\n",
+            " -0.54092083 -0.04270494  0.25216717  0.14315338]\n"
           ]
         }
       ]
@@ -159,29 +159,29 @@
     {
       "cell_type": "code",
       "source": [
-        "#transform the fitter data using transform method\n",
+        "#transform the fitted data using transform method\n",
         "pca_reduced = pca.transform(X)"
       ],
       "metadata": {
-        "id": "YAgmR3ON8H09"
+        "id": "e0Ycf4IAo91D"
       },
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#view the reduced shape(lower dimension)\n",
+        "#view the reduced shape (lower dimension)\n",
         "pca_reduced.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ibtIaxfg8O1d",
-        "outputId": "a017cde9-dc43-46d9-d9a3-faeb93d96a5b"
+        "id": "HKBhoFNipQmr",
+        "outputId": "5e69937f-7e10-4b2d-decb-7dfd26b0e99c"
       },
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,9 +191,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "i-ZueogErJpq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
